Make first arg concrete, later varargs